# load_vanguard

./: Cargo.toml  README.md  loadtest.yml
src/: .env.template  main.rs
