[package]
name = "loadtest-rs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = "1.0.108"
aws-config = "0.57.1"
aws-sdk-cloudwatch = "0.35.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
